# lumalink-json

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  library.json  platformio.ini
cmake/: LumaLinkJsonConfig.cmake.in  run_compile_fail_test.cmake
docs/: usage-guide.md
docs/backlog/task-lists/: 00-spec-serialization-test-backlog.md  01-cmake-build-system-backlog.md  02-json-schema-roadmap.md
docs/design/: 00-decomposition-and-decisions.md  01-architecture-overview.md  02-spec-type-system.md  03-error-model-expected.md  04-codec-engine-and-extensibility.md  05-build-constraints-and-roadmap.md  06-enum-string-mapping.md  07-pfr-compatibility-assessment.md  08-schema-enrichment.md  README.md
docs/usage/: 01-getting-started-and-api.md  02-supported-spec-nodes.md  03-supported-options.md  04-object-binding-and-runtime-behavior.md  05-schema-and-customization.md  06-constraints-and-gotchas.md  07-upgrading-to-v0.11.0.md
pio/: common.ini  env_native_lib.ini  env_native_tests.ini
src/: LumaLinkJson.h  json.h  lumalink_json.cpp  main_native.cpp
src/json/: composite_codec.h  core.h  options.h  scalar_codec.h  schema.h  spec.h  traits.h
src/libs/pfr/: pfr.hpp
src/libs/pfr/pfr/: core.hpp  core_name.hpp  functions_for.hpp  functors.hpp  io.hpp  io_fields.hpp  ops.hpp  ops_fields.hpp  traits.hpp  traits_fwd.hpp  tuple_size.hpp
src/libs/pfr/pfr/detail/: config.hpp  core.hpp  core14_classic.hpp  core14_loophole.hpp  core17.hpp  core17_generated.hpp  core_name14_disabled.hpp  core_name20_static.hpp  detectors.hpp  fake_object.hpp  fields_count.hpp  for_each_field.hpp  for_each_field_impl.hpp  functional.hpp  io.hpp  make_flat_tuple_of_references.hpp  make_integer_sequence.hpp  offset_based_getter.hpp  possible_reflectable.hpp  sequence_tuple.hpp  size_array.hpp  stdarray.hpp  stdtuple.hpp  tie_from_structure_tuple.hpp  unsafe_declval.hpp
test/: CMakeLists.txt
test/compile_fail/: rfl_04_non_aggregate_auto_object_binding_should_fail.cpp  rfl_05_polymorphic_auto_object_binding_should_fail.cpp  rfl_06_union_auto_object_binding_should_fail.cpp  rfl_07_inherited_auto_object_binding_should_fail.cpp  rfl_08_arity_limit_auto_object_binding_should_fail.cpp  tst_05_harness_smoke_should_fail.cpp  val_11_duplicate_min_max_elements_on_array_should_fail.cpp  val_11_duplicate_min_max_value_on_integer_should_fail.cpp  val_11_duplicate_name_on_integer_should_fail.cpp  val_11_duplicate_not_empty_on_string_should_fail.cpp  val_11_duplicate_pattern_on_string_should_fail.cpp  val_11_duplicate_validator_on_integer_should_fail.cpp  val_12_array_validator_returns_string_should_fail.cpp  val_12_validator_returns_expected_int_should_fail.cpp  val_12_validator_returns_int_should_fail.cpp  val_12_validator_returns_void_should_fail.cpp
test/compile_fail/support/: compile_fail_guard.h
test/test_native/: test_catalog.h  test_main.cpp  test_phase10_schema.cpp  test_phase11_validate.cpp  test_phase1_harness.cpp  test_phase2_scalars.cpp  test_phase3_composites.cpp  test_phase4_validators.cpp  test_phase5_errors.cpp  test_phase6_backend.cpp  test_phase7_extensibility.cpp  test_phase8_reflection.cpp  test_phase9_round_trip.cpp
test/test_native/support/: test_support.h
tools/: run_compile_fail_checks.ps1
